[package]
name = "dora-node-api"
version.workspace = true
edition = "2021"
documentation.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["tracing", "shmem"]
tracing = ["dep:dora-tracing"]
shmem = [
    "dora-core/shmem",
    "dep:shared-memory-server",
    "dep:shared_memory_extended",
]

[dependencies]
cfg-if = "1.0.0"
dora-core = { workspace = true }
shared-memory-server = { workspace = true, optional = true }
eyre = "0.6.7"
serde_yaml = "0.8.23"
tracing = "0.1.33"
flume = "0.10.14"
bincode = "1.3.3"
shared_memory_extended = { version = "0.13.0", optional = true }
dora-tracing = { workspace = true, optional = true }
arrow = { workspace = true }
futures = "0.3.28"
futures-concurrency = "7.3.0"
futures-timer = "3.0.2"
dora-arrow-convert = { workspace = true }
aligned-vec = "0.5.0"
serde_json = "1.0.86"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["rt"] }
